# project2-crud/routes/authors.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const router = express.Router();
+const authorsController = require('../controllers/authors');
+const { body } = require('express-validator');
+
+
+router.get('/', authorsController.getAll);
+router.get('/:id', authorsController.getSingle);
+router.post('/', authorsController.createAuthor);
+router.put('/:id', authorsController.updateAuthor);
+router.delete('/:id', authorsController.deleteAuthor);
+
+module.exports = router;
