# project2-crud/routes/index.js
@@ -7,6 +7,8 @@ router.get('/', (req, res) => {
     
 router.use('/books', require('./books'));
 
+router.use('/authors', require('./authors'));
+
 module.exports = router;
 
 
